# DRYML

./: .gitignore  LICENSE  README.md  dev-env.yaml  flake.sh  setup.cfg  test_requirements.txt  tests.sh
.github/workflows/: test310.yaml  test311.yaml  test37.yaml  test38.yaml  test39.yaml  tests.yaml
examples/: MNIST.ipynb
src/dryml/: __init__.py  config.py  core2.py  dry_collections.py  dry_component.py  dry_config.py  dry_model.py  dry_model_average.py  dry_object.py  dry_object_collection.py  dry_pipe.py  dry_repo.py  dry_selector.py  file_intermediary.py  object.py  repo.py  selector.py  utils.py  workshop.py
src/dryml/context/: __init__.py  context_tracker.py  process.py
src/dryml/context/tf/: __init__.py  context.py
src/dryml/context/torch/: __init__.py  context.py
src/dryml/core/: collections.py  config.py  file_intermediary.py  object.py  repo.py  save_cache.py  selector.py  utils.py  workshop.py
src/dryml/core2/: __init__.py  core2.py  definition.py  object.py  repo.py  util.py
src/dryml/data/: __init__.py  dataset.py  dry_data.py  image.py  numpy_dataset.py  transforms.py  util.py
src/dryml/data/pandas/: __init__.py  prep_funcs.py
src/dryml/data/tf/: __init__.py  dataset.py  transforms.py
src/dryml/data/torch/: __init__.py  dataset.py  transforms.py
src/dryml/examples/mnist_digits/: __init__.py  workshop.py
src/dryml/examples/mnist_digits/tf/: models.py
src/dryml/examples/sentiment_analysis/: init.py  train.py  workshop.py
src/dryml/examples/sentiment_analysis/torch/: models.py
src/dryml/metrics/: __init__.py  scalar.py
src/dryml/metrics/tf/: __init__.py  scalar.py
src/dryml/models/: __init__.py  component.py  dry_component.py  dry_model.py  dry_pipe.py  dry_trainable.py  model.py  pipe.py  train_spec.py  trainable.py  utils.py
src/dryml/models/sklearn/: __init__.py  base.py  sklearn_base.py
src/dryml/models/tf/: __init__.py  base.py  keras_sequential.py  tf_base.py  utils.py
src/dryml/models/tf/keras/: __init__.py  base.py
src/dryml/models/torch/: __init__.py  base.py  generic.py  text.py
src/dryml/models/xgb/: __init__.py  base.py
src/dryml/ray/: __init__.py  tune.py
src/dryml/tf/: __init__.py  keras_sequential.py  tf_base.py
src/dryml/vis/: __init__.py  scalar.py
tests/: conftest.py  core2_objects.py  dry_object_tests.py  fixtures.py  mc.py  objects.py  objects2.py  objects_tf.py  test_collections.py  test_component.py  test_config.py  test_contexts.py  test_core2_1.py  test_data.py  test_data_tf.py  test_dry_collections.py  test_dry_component.py  test_dry_config.py  test_dry_object.py  test_dry_repo.py  test_dry_selector.py  test_dry_trainable.py  test_end_to_end.py  test_file_intermediary.py  test_mdl_average.py  test_object.py  test_objs.py  test_selector.py  test_tf.py  test_utils.py  test_workflows.py  utils.py
tests/old/: objects.py  test_data.py  test_end_to_end.py  test_file_intermediary.py  test_object.py  test_repo.py  test_selector.py  test_utils.py
tutorials/: DRYML Tutorial 1 - Object Basics.ipynb  DRYML Tutorial 2 - Datasets and context basics.ipynb  DRYML Tutorial 2 - Datasets.ipynb  DRYML Tutorial 3 - Compute Contexts.ipynb  DRYML Tutorial 3 - Trainables.ipynb  DRYML Tutorial 4 - Contexts 2 and Model Statistics.ipynb  DRYML Tutorial 4 - Trainables.ipynb  DRYML Tutorial 5 - Hyperparameter Tuning with Ray 1.ipynb  DRYML Tutorial 5 - Hyperparameter Tuning with Ray 2.ipynb  DRYML Tutorial 5 - Hyperparameter Tuning with Ray.ipynb  DRYML Tutorial 5 - Model Generation.ipynb  DRYML Tutorial 6 - Hyperparameter Tuning with Ray 1.ipynb  DRYML Tutorial 6 - Hyperparameter Tuning with Ray 2.ipynb
