[metadata]
name = DRYML
version = 0.0.0
description = Don't Repeat Yourself Machine Learning: A Machine Learning library to reduce code duplication, and automate testing.
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Krafczyk
author_email = mkrafcz2@illinois.edu
license = Apache-2.0
license_file = LICENSE
url = https://github.com/ncsa/DRYML
project_urls =
    homepage = https://github.com/ncsa/DRYML 
    Bug Tracker = https://github.com/ncsa/DRYML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
keywords =
    ML

[options]
package_dir =
    = src
install_requires =
    dill
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
