[metadata]
name = dryml
version = 0.2.0
description = Don't Repeat Yourself Machine Learning: A Machine Learning library to reduce code duplication, and increase portability and interoperability in the Machine Learning Space.
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Krafczyk
author_email = mkrafcz2@illinois.edu
license = Apache-2.0
license_file = LICENSE
url = https://github.com/ncsa/dryml
project_urls =
    homepage = https://github.com/ncsa/dryml
    Bug Tracker = https://github.com/ncsa/dryml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    ML

[options]
package_dir =
    = src
install_requires =
    dill
    tqdm
    numpy
    gputil
packages = find:
# Because we use forward annotations from PEP 563, we need at least python 3.7
python_requires = >= 3.7

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    flake8
tf =
    tensorflow
torch =
    pytorch
sklearn =
    scikit-learn
xgboost =
    scikit-learn
    xgboost
ray =
    ray-core
    ray-tune
